--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.idea
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -102,3 +104,4 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+.vscode/settings.json
