--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,77 @@
 language: python
 
-services:
-  - docker
-
 matrix:
-  include:
-    - python: 3.5
-      dist: xenial
-    - python: 3.6
-      dist: xenial
-    - python: 3.7
-      dist: xenial
-
+    include:
+        # basic tests withut a backend
+        - name: "Unittests Python 3.5 No Backend"
+          python: 3.5
+          dist: xenial
+          env:
+              - TEST_TYPE="unittests"
+              - BACKEND="None"
+        - name: "Unittests Python 3.6 No Backend"
+          python: 3.6
+          dist: xenial
+          env:
+              - TEST_TYPE="unittests"
+              - BACKEND="None"
+        - name: "Unittests Python 3.7 No Backend"
+          python: 3.7
+          dist: xenial
+          env:
+              - TEST_TYPE="unittests"
+              - BACKEND="None"
+              
+      # STATIC CHECKS
+        - name: "Static Style Checks"
+          python: 3.7
+          dist: xenial
+          env:
+              - TEST_TYPE="style-check"
+        - name: "Documentation"
+          python: 3.7
+          dist: xenial
+          env:
+              - TEST_TYPE="docs"
 
 # command to install dependencies
 before_install:
-  - pip install -U pip wheel
-  - pip install -r requirements.txt
-  - pip install -r requirements_extra_tf.txt
-  - pip uninstall -y tensorflow-gpu
-  - pip install tensorflow==1.13.1
-  - pip install -r requirements_extra_torch.txt
-  - pip install coverage
-  - pip install codecov
+    - if [[ "$TEST_TYPE" == "unittests" ]]; then
+          bash scripts/ci/install_before_tests.sh;
+      elif [[ "$TEST_TYPE" == "docs" ]]; then
+          bash scripts/ci/install_before_docs.sh;
+      else
+          bash scripts/ci/install_before_style_check.sh;
+          pip install -r docs/requirements.txt;
+      fi
 
 install:
-  - pip install .
-
+    - pip install --no-deps .
+  
 # command to run tests
 script:
-  - coverage run -m unittest
-  # - codecov
+    # run tests or stylechecks
+    - if [[ "$TEST_TYPE" == "unittests" ]]; then
+          bash scripts/ci/run_tests.sh;
+      elif [[ "$TEST_TYPE" == "docs" ]]; then
+          bash scripts/ci/build_docs.sh;
+      else
+          bash scripts/ci/run_style_checks.sh;
+      fi
+
+after_success:
+    - if [[ "$TEST_TYPE" == "unittests" ]]; then
+          codecov;
+
+before_deploy:
+    - cd $TRAVIS_BUILD_DIR
+
+deploy:
+        - provider: pypi
+          user: $PYPI_USERNAME
+          password: $PYPI_PASSWORD
+          on:
+              tags: true
+              distributions: "sdist bdist_wheel"
+              skip_existing: true
+              condition: $TEST_TYPE = style-check
